--- a/program.html
+++ b/program.html
@@ -146,8 +146,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>MetaShield: a Multi-Function AP-Surrounding Metasurface</b><br>
-                            <font size="2">B. Bilgin, E. Knightly</font><br>
+                            <b>Toward Next-generation Volumetric Video Streaming with Neural-based Content Representations</b><br>
+                            <font size="2">K. Liu, R. Cheng, N. Wu, B. Han</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -158,8 +158,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>AraMIMO: Programmable TVWS mMIMO Living Lab for Rural Wireless</b><br>
-                            <font size="2">T. Islam, T. Zhang, J. Boateng, E. Gosling, G. Zu, S. Babu, H. Zhang, D. Qiao</font><br>
+                            <b>FAST: Fast and Accurate Adaptation in Live Video Analytics Using Intermediate Features</b><br>
+                            <font size="2">S. Shin, J. Yi, M. Jeong, Y. Lee</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -170,8 +170,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>Programmable Millimeter-Wave MIMO Radios with Real-Time Baseband Processing</b><br>
-                            <font size="2">Z. Qi, Z. Gao, C. Tung, T. Chen</font><br>
+                            <b>Preserving High Quality in A Learning-based Compression Model for Point Cloud Videos</b><br>
+                            <font size="2">H. Yin, M. Xiao, D. Yu</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -193,8 +193,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>MetaShield: a Multi-Function AP-Surrounding Metasurface</b><br>
-                            <font size="2">B. Bilgin, E. Knightly</font><br>
+                            <b>VCRS: A Novel Approach to Virtual Reality Cycling for Balance Rehabilitation</b><br>
+                            <font size="2">J. Jia, J. Humphrey, P. Darji, B. Zhang, Y. Liu</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -205,8 +205,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>AraMIMO: Programmable TVWS mMIMO Living Lab for Rural Wireless</b><br>
-                            <font size="2">T. Islam, T. Zhang, J. Boateng, E. Gosling, G. Zu, S. Babu, H. Zhang, D. Qiao</font><br>
+                            <b>Multi-modal pose estimation in XR applications leveraging integrated sensing and communication</b><br>
+                            <font size="2">N. Bhat, J. Sameri, J. Struye, M. Vega, R. Berkvens, J. Famaey</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -217,8 +217,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>Programmable Millimeter-Wave MIMO Radios with Real-Time Baseband Processing</b><br>
-                            <font size="2">Z. Qi, Z. Gao, C. Tung, T. Chen</font><br>
+                            <b>Environment-driven mmWave Beamforming for Multi-user Immersive Applications</b><br>
+                            <font size="2">A. Kamari, N. Wu, H. Narsani, B. Han, P. Pathak</font><br>
                         </ulx>
                     </td>
                 </tr>
