--- a/program.html
+++ b/program.html
@@ -248,8 +248,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>MetaShield: a Multi-Function AP-Surrounding Metasurface</b><br>
-                            <font size="2">B. Bilgin, E. Knightly</font><br>
+                            <b>MagicCloth: Protect User Privacy in AR Streaming</b><br>
+                            <font size="2">Y. Hu, M. Zhu, Q. Jin, F. Qian, B. Li</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -260,8 +260,8 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>AraMIMO: Programmable TVWS mMIMO Living Lab for Rural Wireless</b><br>
-                            <font size="2">T. Islam, T. Zhang, J. Boateng, E. Gosling, G. Zu, S. Babu, H. Zhang, D. Qiao</font><br>
+                            <b>Invisible Textures: Comparing Machine and Human Perception of Environment Texture for AR</b><br>
+                            <font size="2">T. Scargill, M. Hadziahmetovic, M. Gorlatova</font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -272,12 +272,23 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>Programmable Millimeter-Wave MIMO Radios with Real-Time Baseband Processing</b><br>
-                            <font size="2">Z. Qi, Z. Gao, C. Tung, T. Chen</font><br>
+                            <b>Toward Scalable and Controllable AR Experimentation</b><br>
+                            <font size="2">A. Ganj, Y. Zhao, F. Galbiati, T. Guo</font><br>
                         </ulx>
                     </td>
                 </tr>
                 <tr>
+                    <td style="vertical-align:text-top;"></td>
+                    <td>
+                        <ulx>
+                            <b>#82 A Comparative Analysis of Genetic Algorithm and Ant Colony Optimization for Mobile Augmented Reality Offloading</b><br>
+                            <font size="2">X. Liu, T. Müller, A. Aaboen, X. Su, S. Tarkoma</font><br>
+                        </ulx>
+                    </td>
+                </tr>
+
+		    
+		    <tr>
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 </tr>
