--- a/program.html
+++ b/program.html
@@ -119,7 +119,7 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>&nbsp;</td>
                 </tr>
 
-		                <tr>
+		<tr>
                     <td>10:00-10:30</td>
                     <td>
                      <ulx>
@@ -292,7 +292,30 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 </tr>
+
+		<tr>
+                    <td>16:00-16:30</td>
+                    <td>
+                     <ulx>
+                            <h4>Coffee Break<br>
+                            <font size="3", style="font-weight:normal">Room: TBD</font></h4><br>
+                    </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+
+	          <tr>
+                    <td>16:30 - 17:30</td>
+                    <td><ulx><h4>Design Workshop: Imagining the Future of Mobile Immersive Computing, Networking, and Systems<br>
+                            <font size="3", style="font-weight:normal">Robert LiKamWa</font></h4><br>
+                        </ulx>
+                    </td>
+                </tr>
 	    
+		    
 	    </table>
 			
                 </div>
