--- a/program.html
+++ b/program.html
@@ -277,11 +277,14 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                         </ulx>
                     </td>
                 </tr>
+		<tr>
+                    <td>&nbsp;</td>
+                </tr>
                 <tr>
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>#82 A Comparative Analysis of Genetic Algorithm and Ant Colony Optimization for Mobile Augmented Reality Offloading</b><br>
+                            <b>A Comparative Analysis of Genetic Algorithm and Ant Colony Optimization for Mobile Augmented Reality Offloading</b><br>
                             <font size="2">X. Liu, T. Müller, A. Aaboen, X. Su, S. Tarkoma</font><br>
                         </ulx>
                     </td>
