--- a/program.html
+++ b/program.html
@@ -139,7 +139,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Toward Next-generation Volumetric Video Streaming with Neural-based Content Representations</b><br>
-                            <font size="2">K. Liu, R. Cheng, N. Wu, B. Han</font><br>
+                            <font size="2">Kaiyan Liu, Ruizhi Cheng, Nan Wu, Bo Han (George Mason University) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -151,7 +151,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>FAST: Fast and Accurate Adaptation in Live Video Analytics Using Intermediate Features</b><br>
-                            <font size="2">S. Shin, J. Yi, M. Jeong, Y. Lee</font><br>
+                            <font size="2">Seokgyeong Shin, Juheon Yi, Minkyung Jeong, Youngki Lee (Seoul National University) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -163,7 +163,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Preserving High Quality in A Learning-based Compression Model for Point Cloud Videos</b><br>
-                            <font size="2">H. Yin, M. Xiao, D. Yu</font><br>
+                            <font size="2">Haofei Yin, Mengbai Xiao, Dongxiao Yu (Shandong University) </font><br>
                         </ulx>
                     </td>
                 </tr>
