--- a/program.html
+++ b/program.html
@@ -186,7 +186,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>VCRS: A Novel Approach to Virtual Reality Cycling for Balance Rehabilitation</b><br>
-                            <font size="2">J. Jia, J. Humphrey, P. Darji, B. Zhang, Y. Liu</font><br>
+                            <font size="2">Jing Jia, Julianne D'Avirro Humphrey, Parth Darji, Binsheng Zhang, Yao Liu (Rutgers University) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -198,7 +198,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Multi-modal pose estimation in XR applications leveraging integrated sensing and communication</b><br>
-                            <font size="2">N. Bhat, J. Sameri, J. Struye, M. Vega, R. Berkvens, J. Famaey</font><br>
+                            <font size="2">Nabeel Nisar Bhat (University of Antwerp -imec), Javad Sameri (Ghent University-imec), Jakob Struye (University of Antwerp - imec), Maria Torres Vega (KU Leuven), Rafael Berkvens, Jeroen Famaey University of Antwerp - imec) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -210,7 +210,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Environment-driven mmWave Beamforming for Multi-user Immersive Applications</b><br>
-                            <font size="2">A. Kamari, N. Wu, H. Narsani, B. Han, P. Pathak</font><br>
+                            <font size="2">Ahmad Kamari, Nan Wu, Hemant Kumar Narsani, Bo Han, Parth Pathak (George Mason University) </font><br>
                         </ulx>
                     </td>
                 </tr>
