--- a/program.html
+++ b/program.html
@@ -241,7 +241,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>MagicCloth: Protect User Privacy in AR Streaming</b><br>
-                            <font size="2">Y. Hu, M. Zhu, Q. Jin, F. Qian, B. Li</font><br>
+                            <font size="2">Yuming Hu (University of Minnesota - Twin Cities), Mingyu Zhu (Pennsylvania State University), Qiao Jin, Feng Qian (University of Minnesota - Twin Cities), Bin Li (Pennsylvania State University) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -253,7 +253,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Invisible Textures: Comparing Machine and Human Perception of Environment Texture for AR</b><br>
-                            <font size="2">T. Scargill, M. Hadziahmetovic, M. Gorlatova</font><br>
+                            <font size="2">Tim Scargill, Majda Hadziahmetovic, Maria Gorlatova (Duke University) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -265,7 +265,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Toward Scalable and Controllable AR Experimentation</b><br>
-                            <font size="2">A. Ganj, Y. Zhao, F. Galbiati, T. Guo</font><br>
+                            <font size="2">Ashkan Ganj, Yiqin Zhao, Federico Galbiati, Tian Guo (Worcester Polytechnic Institute) </font><br>
                         </ulx>
                     </td>
                 </tr>
@@ -277,7 +277,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>A Comparative Analysis of Genetic Algorithm and Ant Colony Optimization for Mobile Augmented Reality Offloading</b><br>
-                            <font size="2">X. Liu, T. Müller, A. Aaboen, X. Su, S. Tarkoma</font><br>
+                            <font size="2">Xiaoli Liu (University of Helsinki), Tormod Mork Müller, Aleksander Aaboen, Xiang Su (Norwegian University of Science and Technology), Sasu Tarkoma (University of Helsinki) </font><br>
                         </ulx>
                     </td>
                 </tr>
