--- a/program.html
+++ b/program.html
@@ -198,7 +198,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <b>Multi-modal pose estimation in XR applications leveraging integrated sensing and communication</b><br>
-                            <font size="2">Nabeel Nisar Bhat (University of Antwerp -imec), Javad Sameri (Ghent University-imec), Jakob Struye (University of Antwerp - imec), Maria Torres Vega (KU Leuven), Rafael Berkvens, Jeroen Famaey University of Antwerp - imec) </font><br>
+                            <font size="2">Nabeel Nisar Bhat (University of Antwerp -imec), Javad Sameri (Ghent University-imec), Jakob Struye (University of Antwerp - imec), Maria Torres Vega (KU Leuven), Rafael Berkvens, Jeroen Famaey (University of Antwerp - imec) </font><br>
                         </ulx>
                     </td>
                 </tr>
