--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		(ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="jumbotron.css" rel="stylesheet">. 
+    <link href="jumbotron.css" rel="stylesheet"> 
    
 
     <style>
