--- a/program.html
+++ b/program.html
@@ -130,7 +130,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <h4>Session 1: Video Streaming and Analytics<br>
-                            <font size="3", style="font-weight:normal">Session chair: TBD</font></h4><br>
+                            <font size="3", style="font-weight:normal">Session chair: Jeroen Famaey</font></h4><br>
                         </ulx>
                     </td>
                 </tr>
@@ -177,7 +177,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <h4>Session 2: Immersive Applications<br>
-                            <font size="3", style="font-weight:normal">Session chair: TBD</font></h4><br>
+                            <font size="3", style="font-weight:normal">Session chair: Yuming Hu</font></h4><br>
                         </ulx>
                     </td>
                 </tr>
@@ -232,7 +232,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td>
                         <ulx>
                             <h4>Session 3: Augmented Reality<br>
-                            <font size="3", style="font-weight:normal">Session chair: TBD</font></h4><br>
+                            <font size="3", style="font-weight:normal">Session chair: Ruizhi Cheng</font></h4><br>
                         </ulx>
                     </td>
                 </tr>
