--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
+		       <li>October 9th, 2023 - Photos are available at <a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fphotos.app.goo.gl%2FPgaX9SwwWs2SLwfG6&data=05%7C01%7Cbohan%40gmu.edu%7Cdc631399b4064d1f435908dbc8831917%7C9e857255df574c47a0c00546460380cb%7C0%7C0%7C638324237623884370%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=ebh3NKxnZi0YDXr9oKp5AP0eBwGQW22D2ngP3tLJotM%3D&reserved=0">here</a></li>
 		       <li>June 13th, 2023 - Deadline is extended by one week</li>
 		       <li>April 26th, 2023 - Keynote is announced</li>
 		       <li>April 24th, 2023 - Program committee is announced</li>
