--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col-md-12">
                     <h2>Welcome</h2>
                     <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
-				The workshop will be held on the October 6, 2023, in conjunction with <a
+				The workshop will be held on October 6, 2023, in conjunction with <a
                             href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a>.</p>
 		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentations can be 
 			    made available upon request by the authors of accepted papers.</p>
@@ -85,7 +85,7 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
-		       <li>October 9th, 2023 - Photos are available at <a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fphotos.app.goo.gl%2FPgaX9SwwWs2SLwfG6&data=05%7C01%7Cbohan%40gmu.edu%7Cdc631399b4064d1f435908dbc8831917%7C9e857255df574c47a0c00546460380cb%7C0%7C0%7C638324237623884370%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=ebh3NKxnZi0YDXr9oKp5AP0eBwGQW22D2ngP3tLJotM%3D&reserved=0">here</a></li>
+		       <li>October 9th, 2023 - Photos are available <a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fphotos.app.goo.gl%2FPgaX9SwwWs2SLwfG6&data=05%7C01%7Cbohan%40gmu.edu%7Cdc631399b4064d1f435908dbc8831917%7C9e857255df574c47a0c00546460380cb%7C0%7C0%7C638324237623884370%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=ebh3NKxnZi0YDXr9oKp5AP0eBwGQW22D2ngP3tLJotM%3D&reserved=0">here</a></li>
 		       <li>June 13th, 2023 - Deadline is extended by one week</li>
 		       <li>April 26th, 2023 - Keynote is announced</li>
 		       <li>April 24th, 2023 - Program committee is announced</li>
