--- a/program.html
+++ b/program.html
@@ -150,7 +150,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>FAST: Fast and Accurate Adaptation in Live Video Analytics Using Intermediate Features</b><br>
+                            <b>FAST: Fast and Accurate Adaptation in Live Video Analytics Using Intermediate Features</b> <p style="color:#FF0000">- Best Paper Award Runner-up #1</p> <br>
                             <font size="2">Seokgyeong Shin, Juheon Yi, Minkyung Jeong, Youngki Lee (Seoul National University) </font><br>
                         </ulx>
                     </td>
@@ -264,7 +264,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>Toward Scalable and Controllable AR Experimentation</b><br>
+                            <b>Toward Scalable and Controllable AR Experimentation</b> <p style="color:#FF0000">- Best Paper Award Runner-up #2</p> <br>
                             <font size="2">Ashkan Ganj, Yiqin Zhao, Federico Galbiati, Tian Guo (Worcester Polytechnic Institute) </font><br>
                         </ulx>
                     </td>
