--- a/program.html
+++ b/program.html
@@ -252,7 +252,7 @@ The workshop will take place in the Princesa conference room.</td>
                     <td style="vertical-align:text-top;"></td>
                     <td>
                         <ulx>
-                            <b>Invisible Textures: Comparing Machine and Human Perception of Environment Texture for AR</b> <p style="color:#FF0000">- Best Paper Award</p> <br>
+                            <b>Invisible Textures: Comparing Machine and Human Perception of Environment Texture for AR <p style="color:#FF0000">- Best Paper Award</p> </b> <br>
                             <font size="2">Tim Scargill, Majda Hadziahmetovic, Maria Gorlatova (Duke University) </font><br>
                         </ulx>
                     </td>
