--- a/call.html
+++ b/call.html
@@ -24,7 +24,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="index.html">ImmerCom 2023</a>
+        <a class="navbar-brand" href="index.html">ImmerCom 2024</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
         <div class="jumbotron">
             <div class="container">
 	       <div class="text-background">
-                <h1 class="display-3">ImmerCom 2023</h1>
+                <h1 class="display-3">ImmerCom 2024</h1>
                 <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
                 <p> <h5>October 6, 2023,  <b>  </b>Madrid, Spain </h5></p>
@@ -72,20 +72,23 @@
                     <h2>Call for Papers</h2>
                     <p>
                     Immersive technologies such as virtual, augmented, and mixed reality (VR, AR, and MR), which are often referred to as a universal term - extended reality (XR), have enabled numerous
-                    appealing applications in education, training, entertainment, and healthcare. Emerging applications and systems enabled by AR/VR/MR, especially the burgeoning metaverse, naturally
+                    appealing applications in education, training, entertainment, and healthcare. The emerging applications enabled by AR/VR/MR, especially the burgeoning metaverse, naturally
                     involve multiple geographically distributed users interacting and communicating over the Internet. Given its interdisciplinary nature, XR has been extensively investigated in computer
                     graphics, computer vision, and human-computer interaction communities. Nonetheless, XR and the metaverse put more strain on the underlying networks and systems to deliver high-quality
-                    immersive content in real time and guarantee a satisfactory user experience, which is still underexplored in the mobile computing and networking community.</p>
+                    immersive content in real-time and guarantee a satisfactory user experience, which is still underexplored in the mobile computing and networking community.
+                    </p>
 
-                    <p>This Workshop aims to bring together researchers, engineers, practitioners, and policymakers from academia, industry, and government to discuss the latest research and identify future
-                       opportunities for mobile immersive computing, networking, and systems. It solicits high-quality original research and novel developments that promote innovations to advance mobile
-                       immersive content delivery, AR/VR/MR, and the metaverse. It also welcomes papers that summarize research challenges, survey existing solutions, and/or propose visionary solutions to
-                       ongoing issues in mobile XR and the metaverse.</p>
+                    <p>
+                        This Workshop aims to bring together researchers, engineers, practitioners, and policymakers from academia, industry, and government to discuss the latest research and identify future
+                       opportunities for AR/VR/MR and the metaverse. It solicits high-quality original research and novel developments that promote innovations to advance mobile
+                       AR/VR/MR and the metaverse. It also welcomes papers that summarize research challenges, survey existing solutions, and/or propose visionary solutions to
+                       ongoing issues in mobile XR and the metaverse.
+                    </p>
 
 		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentations can be made available upon request by the authors 
 			    of accepted papers.</p>
                     <h2>Topics of Interest</h2>
-                    <p>Key research topics include but are not limited to: 
+                    <p>Topics may include but are not limited to:
                     </p>
                     <ul>
                         <li>Algorithms, theories, tools, and testbeds for AR/VR/MR and the metaverse</li>
@@ -95,13 +98,13 @@
                         <li>Generative AI for immersive systems and applications</li>
                         <li>Harassment detection and prevention in the metaverse</li>
                         <li>High-performance and scalable rendering for mobile graphics</li>
-                        <li>Immersive content delivery for mobile devices</li>
-                        <li>Internet routing and address for immersive systems and applications</li>
+                        <li>Immersive media streaming for mobile devices</li>
                         <li>Machine learning, data science, and blockchains for AR/VR/MR and the metaverse</li>
                         <li>Multi-user spatial synchronization and 6DoF pose prediction in AR/MR</li>
                         <li>Novel applications of AR/VR/MR in education, entertainment, healthcare, training, etc</li>                       
                         <li>Scalability and heterogeneity of multi-user XR and the metaverse</li>
                         <li>Security and privacy in AR/VR/MR and the metaverse</li>
+                        <li>Datasets, testbeds and frameworks for repeatable/reproducible AR/VR/MR evaluation</li>
                     </ul>
 			
 		    <h2>Best Paper Awards</h2>
@@ -109,10 +112,11 @@
 			
                     <h2>Important Dates</h2>
                     <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 25th, 2023, AoE</li>
-                        <li>Camera-ready due: August 7th, 2023, AoE</li>
+                        <!--<li>Abstract registration deadline: June 23rd, 2023, AoE </li>-->
+                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
+                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
+                        <li>Camera-ready due: September 13, 2024, AoE</li>
+                        <li>Workshop Date: November 18, 2024</li>
                     </ul>
                     
                     
