--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
-		(ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
-    <title>ImmerCom 2023</title>
+       content="The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
+		(ImmerCom) 2024. The workshop will be held on November 18, 2024. Immercom is in conjunction with MobiCom 2024">
+    <title>ImmerCom 2024</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet"> 
    
@@ -25,7 +25,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">ImmerCom 2023</a>
+        <a class="navbar-brand" href="#">ImmerCom 2024</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,12 +44,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="program.html">Technical Program</a>
-                </li>        
-		<li class="nav-item">
-                    <a class="nav-link" href="keynote.html">Keynote</a>
-                </li>
             </ul>
         </div>
    </nav>
@@ -59,10 +53,10 @@
         <div class="jumbotron">
             <div class="container">
 	       <div class="text-background">
-                <h1 class="display-3"> ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
-		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>October 6, 2023, <b>  </b>Madrid, Spain </h5></p>
+                <h1 class="display-3"> ImmerCom 2024</h1>
+                <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
+		<p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
+                <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
                </div>
 	    </div>
         </div>
@@ -71,20 +65,23 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Welcome</h2>
-                    <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
-				The workshop will be held on October 6, 2023, in conjunction with <a
-                            href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a>.</p>
+                    <p>The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2024). 
+				The workshop will be held on November 18, 2024, in conjunction with <a
+                            href="https://www.sigmobile.org/mobicom/2024/">MobiCom 2024</a>.</p>
 		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentations can be 
 			    made available upon request by the authors of accepted papers.</p>
                     <h3>Important Dates</h3>
                        <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 25th, 2023, AoE</li>
-                        <li>Camera-ready due: August 7th, 2023, AoE</li>
+                        <!--<li>Abstract registration deadline: June 23rd, 2023, AoE </li>-->
+                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
+                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
+                        <li>Camera-ready due: September 13, 2024, AoE</li>
+                        <li>Workshop Date: November 18, 2024</li>
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
+                        ImmerCom 2024 is live!
+                 <!--       
 		       <li>October 9th, 2023 - Photos are available <a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fphotos.app.goo.gl%2FPgaX9SwwWs2SLwfG6&data=05%7C01%7Cbohan%40gmu.edu%7Cdc631399b4064d1f435908dbc8831917%7C9e857255df574c47a0c00546460380cb%7C0%7C0%7C638324237623884370%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=ebh3NKxnZi0YDXr9oKp5AP0eBwGQW22D2ngP3tLJotM%3D&reserved=0">here</a></li>
 		       <li>June 13th, 2023 - Deadline is extended by one week</li>
 		       <li>April 26th, 2023 - Keynote is announced</li>
@@ -92,6 +89,7 @@
 		       <li>April 23rd, 2023 - Submission instructions are online</li>
 		       <li>April 23rd, 2023 - Call for papers is online</li>
                        <li>April 22nd, 2023 - ACM ImmerCom 2023 webpage is live</li>
+                -->
                        </ul>
                 </div>
             </div>
