updata on submission & call

--- a/call.html
+++ b/call.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
-		 (ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
+        content="The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
+		(ImmerCom) 2024. The workshop will be held on November 18, 2024. Immercom is in conjunction with MobiCom 2024">
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
@@ -43,12 +43,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="program.html">Technical Program</a>
-                </li> 
-		<li class="nav-item">
-                    <a class="nav-link" href="keynote.html">Keynote</a>
-                </li>
             </ul>
         </div>
    </nav>
@@ -56,13 +50,13 @@
 <main role="main">
         <div class="jumbotron">
             <div class="container">
-	       <div class="text-background">
-                <h1 class="display-3">ImmerCom 2024</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
-		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p> <h5>October 6, 2023,  <b>  </b>Madrid, Spain </h5></p>
-	      </div>
+        <div class="text-background">
+                <h1 class="display-3"> ImmerCom 2024</h1>
+                <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
+        <p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
+                <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
             </div>
+        </div>
         </div>
 
         <div class="container">
