--- a/submission.html
+++ b/submission.html
@@ -4,30 +4,32 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
-		 (ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
-    <title>ImmerCom 2023</title>
+    <meta name="description"
+       content="The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
+		(ImmerCom) 2024. The workshop will be held on November 18, 2024. Immercom is in conjunction with MobiCom 2024">
+    <title>ImmerCom 2024</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="jumbotron.css" rel="stylesheet">
-	
-	    <style>
+    <link href="jumbotron.css" rel="stylesheet"> 
+   
+
+    <style>
     .text-background {
         background-color: rgba(0, 0, 0, 0.5);  /* black background with 50% opacity */
         color: #fff;  /* white text */
-        padding: 15px;
+        padding: 15px;   
     }
     </style>
 	
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">ImmerCom 2023</a>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">ImmerCom 2024</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
@@ -41,27 +43,21 @@
                 <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="program.html">Technical Program</a>
-                </li> 
-		<li class="nav-item">
-                    <a class="nav-link" href="keynote.html">Keynote</a>
-                </li>
             </ul>
         </div>
    </nav>
    
 <main role="main">
-        <div class="jumbotron">
-            <div class="container">
-	       <div class="text-background">
-                <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
-		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p> <h5>October 6, 2023, <b>  </b>Madrid, Spain </h5></p>
-		</div>
-            </div>
-        </div>
+    <div class="jumbotron">
+        <div class="container">
+       <div class="text-background">
+            <h1 class="display-3"> ImmerCom 2024</h1>
+            <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
+    <p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
+            <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
+           </div>
+    </div>
+    </div>
 
         <div class="container">
             <div class="row">
@@ -75,15 +71,15 @@
                             (Please note that the default template font is 9pt and must be changed to 10pt.)</p> 
 		    <h2>Submission Website</h2>
                     <ul>
-                      <a href="https://immercom23.hotcrp.com/">ImmerCom2023 on HotCRP</a></p>
+                      <a href="https://immercom24.hotcrp.com/">ImmerCom2024 on HotCRP</a></p>
                     </ul>
 		    
 		    <h2>Important Dates</h2>
                     <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 25th, 2023, AoE</li>
-                        <li>Camera-ready due: August 7th, 2023, AoE</li>
+                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
+                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
+                        <li>Camera-ready due: September 13, 2024, AoE</li>
+                        <li>Workshop Date: November 18, 2024</li>
                     </ul>
 		    
 
