--- a/committees.html
+++ b/committees.html
@@ -7,17 +7,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
-		(ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
-    <title>ImmerCom 2023</title>
+       content="The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
+		(ImmerCom) 2024. The workshop will be held on November 18, 2024. Immercom is in conjunction with MobiCom 2024">
+    <title>ImmerCom 2024</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="jumbotron.css" rel="stylesheet">
-	
-	  <style>
+    <link href="jumbotron.css" rel="stylesheet"> 
+   
+
+    <style>
     .text-background {
         background-color: rgba(0, 0, 0, 0.5);  /* black background with 50% opacity */
         color: #fff;  /* white text */
-        padding: 15px;
+        padding: 15px;   
     }
     </style>
 	
@@ -25,7 +26,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="index.html">ImmerCom 2023</a>
+        <a class="navbar-brand" href="#">ImmerCom 2024</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,12 +45,6 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="program.html">Technical Program</a>
-                </li>           
-		<li class="nav-item">
-                    <a class="nav-link" href="keynote.html">Keynote</a>
-                </li>
             </ul>
         </div>
    </nav>
@@ -57,13 +52,13 @@
 <main role="main">
         <div class="jumbotron">
             <div class="container">
-	       <div class="text-background"> 
-                <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
-		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p> <h5>October 6, 2023,  <b>  </b>Madrid, Spain </h5></p>
-	      </div>
+        <div class="text-background">
+                <h1 class="display-3"> ImmerCom 2024</h1>
+                <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
+        <p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
+                <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
             </div>
+        </div>
         </div>
 
         <div class="container">           
@@ -79,19 +74,20 @@
                     </ul>
 		    <h2>Program Co-chairs</h2>
                     <ul>
-                        <li>Bo Han, George Mason University, USA</li>
-                        <li>Robert LiKamWa, Arizona State University, USA</li>
-                        <li>Feng Qian, University of Minnesota, USA</li>
+                        <li>Mallesh Dasari, Northeastern University, USA</li>
+                        <li>Jiasi Chen, University of Michigan, USA</li>
+                        <li>Yao Liu, Rutgers University, USA</li>
                     </ul>
 		    <h2>Web Chair</h2>
                     <ul>
-                        <li>Puqi Zhou, George Mason University, USA</li>
+                        <li>Mufeng Zhu, Rutgers University, USA</li>
                     </ul>
-		    <h2>Publicity Chair</h2>
+		    <!--<h2>Publicity Chair</h2>
                     <ul>
                     <li>Ruizhi Cheng, George Mason University, USA</li>
-                    </ul>
+                    </ul>-->
 					<h2>Technical Program Committee</h2>
+                    <!--
                     <ul>
                         <li>Özgü Alay, University of Oslo, Norway</li>
                         <li>Bhojan Anand, National University of Singapore, Singapore</li>
@@ -122,7 +118,7 @@
 			<li>Hui-Yin Wu, Inria, France</li>						
 			<li>Zehui Xiong, Singapore University of Technology and Design, Singapore</li>
 			<li>Ding Zhang, Amazon, USA</li>
-			</ul>                    
+			</ul>-->                    
                 </div>
             </div>
             <hr>
