--- a/committees.html
+++ b/committees.html
@@ -87,9 +87,22 @@
                     <li>Ruizhi Cheng, George Mason University, USA</li>
                     </ul>-->
 					<h2>Technical Program Committee</h2>
+                        <li>Jiayi Meng, The University of Texas at Arlington, USA</li>
+                        <li>Zili Meng, The Hong Kong University of Science and Technology, Hong Kong</li>
+                        <li>Christian Timmerer, Alpen-Adria-Universität Klagenfurt, Austria</li>
+                        <li>Federica Battisti, University of Padova, Italy</li>
+                        <li>Klara Nahrstedt, University of Illinois Urbana-Champaign, USA</li>
+                        <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
+                        <li>Maria Gorlatova, Duke University, USA</li>
+                        <li>Ruizhi Cheng, George Mason University, USA</li>
+                        <li>Tao Jin, Carnegie Mellon University, USA</li>
+                        <li>Bo Chen, University of Illinois at Urbana-Champaign, USA</li>
+                        <li>Fangxin Wang, The Chinese University of Hong Kong, Hong Kong</li>
+                        <li>Abdelhak Bentaleb, Concordia University, USA</li>
+
                     <!--
                     <ul>
-                        <li>Özgü Alay, University of Oslo, Norway</li>
+                        
                         <li>Bhojan Anand, National University of Singapore, Singapore</li>
                         <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
                         <li>Dimitris Chatzopoulos, University College Dublin, Ireland</li>
@@ -105,7 +118,7 @@
 			<li>Guillaume Lavoué, École Nationale d'Ingénieurs de Saint-Étienne, France</li>    
 			<li>Youngki Lee, Seoul National University, South Korea</li>
 			<li>Xiaoli Liu, University of Helsinki, Finland</li>
-			<li>Jiayi Meng, Purdue University, USA</li>
+			
 			<li>Mario Montagud, University of Valencia & i2CAT Foundation, Spain</li>
                         <li>Niall Murray, Athlone Institute of Technology, Ireland</li>
                         <li>Xiuquan Qiao, Beijing University of Posts and Telecommunications, China</li>
